Fix dashboard-cliente page title alignment

--- a/src/app/pages/dashboard-cliente/dashboard-cliente.page.scss
+++ b/src/app/pages/dashboard-cliente/dashboard-cliente.page.scss
@@ -99,7 +99,6 @@ ion-menu ion-title {
   text-align: center;
   justify-content: center;
   display: flex;
-  padding-top: 1rem;
   align-items: center;
 }
 
